--- a/test.html
+++ b/test.html
@@ -5,6 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
+
+	SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
 	<input type="button" value='点点' id='btn'/>
 	<script>
 /*	var btn = document.getElementById('btn');
