--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
+	线上编辑
 	<input type="button" value='点点' id='btn'/>
 	<script>
 /*	var btn = document.getElementById('btn');
